--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS=--max-old-space-size=4096 vite",
+    "stage": "NODE_ENV=stage NODE_OPTIONS=--max-old-space-size=4096 vite",
     "serve": "pnpm dev",
     "build": "rimraf dist && NODE_OPTIONS=--max-old-space-size=8192 vite build",
     "build:staging": "rimraf dist && vite build --mode staging",
@@ -50,6 +51,7 @@
     "responsive-storage": "^2.2.0",
     "sortablejs": "^1.15.0",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.2",
     "vue-types": "^5.1.0"
   },
@@ -59,6 +61,7 @@
     "@iconify-icons/ep": "^1.2.12",
     "@iconify-icons/ri": "^1.2.9",
     "@iconify/vue": "^4.1.1",
+    "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@pureadmin/theme": "^3.1.0",
     "@types/js-cookie": "^3.0.3",
     "@types/mockjs": "^1.0.7",
