--- a/public/serverConfig.json
+++ b/public/serverConfig.json
@@ -1,10 +1,11 @@
 {
   "Version": "4.5.0",
-  "Title": "PureAdmin",
+  "Title": "NBA-Portal",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
   "KeepAlive": true,
+  "Locale": "zh",
   "Layout": "vertical",
   "Theme": "default",
   "DarkMode": false,
